--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="mukuru.png">
+    <img src="mukuru.png" alt='blinking!' id='blinking_image'>
     
 </body>
 </html>
