--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video autoplay muted loop id="background_video">
+        <source src="istockphoto-1479538228-640_adpp_is.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     <img src="mukuru.png" alt='blinking!' id='blinking_image'>
-    
 </body>
 </html>
