--- a/index.html
+++ b/index.html
@@ -12,5 +12,23 @@
         Your browser does not support the video tag.
     </video>
     <img src="mukuru.png" alt='blinking!' id='blinking_image'>
+    <h1>Mukhuru: Where Borders Disappear, Connections Grow</h1>
+    <div id="app">
+    
+            <section id="search">
+                <label for="country">Select Country:</label>
+                <select id="country">
+                    <option value="ZW">Zimbabwe</option>
+                    <option value="MW">Malawi</option>
+                    <option value="ZM">Zambia</option>
+                </select>
+                <button id="searchButton">Find Locations</button>
+            </section>
+            <section id="results">
+                <h2>Available Locations</h2>
+                <ul id="locationList"></ul>
+            </section>
+        
+    </div>
 </body>
 </html>
