--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mukuru Login page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <!-- Video Background -->
+    <video autoplay muted loop id="video2">
+        <source src="video2.mp4" type="video/mp4">
+    </video>
+
+    <div class="content">
+        <h1>Welcome to <img src="mukuru.png" alt='blinking!' id='blinking_image'>
+            Where Borders Disappear, and Connections Grow</h1>
+            <!-- Our Financial Services</h1> -->
+
+    </div>
+
+</body>
+
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,4 +58,4 @@
         
     </div>
 </body>
-</html>
+</html> -->
