--- a/index.html
+++ b/index.html
@@ -9,53 +9,20 @@
 </head>
 
 <body>
-    <!-- Video Background -->
     <video autoplay muted loop id="video2">
         <source src="video2.mp4" type="video/mp4">
     </video>
 
     <div class="content">
-        <h1>Welcome to <img src="mukuru.png" alt='blinking!' id='blinking_image'>
-            Where Borders Disappear, and Connections Grow</h1>
-            <!-- Our Financial Services</h1> -->
+        <img src="mukuru.png" alt='blinking!' id='blinking_image'>
+            <h1>Where Borders Disappear, and Connections Grow</h1>
 
+    <div class="button-group">
+        <button class="button">Sign Up</button>
+        <button class="button reverse">Login</button>
+    </div>
     </div>
 
 </body>
 
 </html>
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SheHacks Hackathon</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <video autoplay muted loop id="background_video">
-        <source src="istockphoto-1479538228-640_adpp_is.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-    <img src="mukuru.png" alt='blinking!' id='blinking_image'>
-    <h1>Mukhuru: Where Borders Disappear, Connections Grow</h1>
-    <div id="app">
-    
-            <section id="search">
-                <label for="country">Select Country:</label>
-                <select id="country">
-                    <option value="ZW">Zimbabwe</option>
-                    <option value="MW">Malawi</option>
-                    <option value="ZM">Zambia</option>
-                </select>
-                <button id="searchButton">Find Locations</button>
-            </section>
-            <section id="results">
-                <h2>Available Locations</h2>
-                <ul id="locationList"></ul>
-            </section>
-        
-    </div>
-</body>
-</html> -->
