fixed the login and sign up pages

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             <h1>Where Borders Disappear, and Connections Grow</h1>
 
     <div class="button-group">
-        <button class="button">Sign Up</button>
-        <button class="button reverse">Login</button>
+        <!-- <button class="button">Sign Up</button> -->
+        <button class="button " onclick="window.location.href='sign-up.html'">Sign up</button>
+        <button class="button reverse" onclick="window.location.href='login.html'">Login</button>
     </div>
     </div>
 
