--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Mukuru Login page</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,11 +15,11 @@
 
     <div class="content">
         <img src="mukuru.png" alt='blinking!' id='blinking_image'>
-            <h1>Where Borders Disappear, and Connections Grow</h1>
+            <h1>Where Borders Disappear and Connections Grow</h1>
 
     <div class="button-group">
         <!-- <button class="button">Sign Up</button> -->
-        <button class="button " onclick="window.location.href='sign-up.html'">Sign up</button>
+        <!-- <button class="button " onclick="window.location.href='sign-up.html'">Sign up</button> -->
         <button class="button reverse" onclick="window.location.href='login.html'">Login</button>
     </div>
     </div>
