--- a/login.html
+++ b/login.html
@@ -16,9 +16,9 @@
             <input type="email" id="email" name="email" required>
             <button type="submit">Continue</button>
         </form>
-        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+        <p>Already have an account? <a href="login.html">Login</a></p>
         <div class="social-login">
-            <button class="social-button google">
+            <!-- <button class="social-button google">
                 <img src="google logo.jpg" alt="Google Logo">
                 Continue with Google
             </button>
@@ -29,7 +29,7 @@
             <button class="social-button apple">
                 <img src="apple logo.png" alt="Apple Logo">
                 Continue with Apple
-            </button>
+            </button> -->
         </div>
     </div>
 </body>
