--- a/login.html
+++ b/login.html
@@ -14,6 +14,8 @@
         <form class="login-form">
             <label for="email">Email address*</label>
             <input type="email" id="email" name="email" required>
+            <label for="email">Enter Password*</label>
+            <input type="password" id="password" name="password" required>
             <button type="submit">Continue</button>
         </form>
         <p>Already have an account? <a href="login.html">Login</a></p>
