--- a/login.html
+++ b/login.html
@@ -11,12 +11,13 @@
 <body>
     <div class="login-container">
         <h1>Welcome back</h1>
-        <form class="login-form">
+        <form class="login-form" action="homepage.html">
             <label for="email">Email address*</label>
             <input type="email" id="email" name="email" required>
             <label for="email">Enter Password*</label>
             <input type="password" id="password" name="password" required>
-            <button type="submit">Continue</button>
+            <button type="submit"  >Continue</button>
+            
         </form>
         <p>Already have an account? <a href="login.html">Login</a></p>
         <div class="social-login">
